# ICA

./: README.md  package.json
Back_End/: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.md
Back_End/app/: ensure_test_database.py  main.py  seed.py
Back_End/app/api/: deps.py
Back_End/app/core/: config.py  exceptions.py  responses.py  security.py
Back_End/app/db/: session.py
Back_End/app/domain/: enums.py
Back_End/app/models/: __init__.py  academic.py  assignment.py  attendance.py  audit_log.py  enrollment.py  final_project.py  grade.py  material.py  notification.py  profiles.py  progress.py  quiz.py  refresh_token.py  user.py
Back_End/app/repositories/: academic.py  assignments.py  attendance.py  audit_logs.py  dashboards.py  enrollments.py  final_projects.py  grades.py  materials.py  notifications.py  progress.py  quizzes.py  refresh_tokens.py  users.py
Back_End/app/schemas/: academic.py  assignments.py  attendance.py  auth.py  bonus.py  dashboards.py  enrollments.py  final_projects.py  grades.py  materials.py  (+5 more)
Back_End/migrations/: env.py
Back_End/scripts/: start.sh
Back_End/tests/: conftest.py  test_phase_1.py  test_phase_10_progress.py  test_phase_11_ranking.py  test_phase_12_final_projects.py  test_phase_13_notifications.py  test_phase_14_dashboards.py  test_phase_2_academic.py  test_phase_3_enrollments.py  test_phase_4_materials.py  test_phase_5_assignments.py  test_phase_6_grades.py  test_phase_7_attendance.py  test_phase_8_quizzes.py  test_phase_9_bonus.py
(+60 files in other folders)
