[project]
name = "ica-management-system"
version = "0.1.0"
description = "Phase 1 backend foundation for ICA Management System"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.14,<2",
    "argon2-cffi>=23.1,<26",
    "asyncpg>=0.30,<1",
    "email-validator>=2.2,<3",
    "fastapi>=0.115,<1",
    "greenlet>=3.1,<4",
    "pydantic>=2.10,<3",
    "pydantic-settings>=2.7,<3",
    "pyjwt>=2.10,<3",
    "python-multipart>=0.0.20,<1",
    "sqlalchemy>=2.0,<3",
    "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
test = [
    "httpx>=0.28,<1",
    "pytest>=8.3,<9",
    "pytest-asyncio>=0.25,<2",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["app*"]
